--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="public/icono.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aplicación de seguimiento de gestion de gastos">
     <link rel="manifest" href="/manifest.json"/>
     <title>Aplicación - SGP</title>
   </head>
